fix color contrast on gray-light pill, add lighter gray background color variable

--- a/app/styles/component.pill.scss
+++ b/app/styles/component.pill.scss
@@ -7,75 +7,75 @@
  ========================================================================== */
 
 .pill {
-	i.vi {
-		display: inline;
-		font-size: 80%;
-		line-height: 1;
-	}
+  i.vi {
+    display: inline;
+    font-size: 80%;
+    line-height: 1;
+  }
 }
 
 .pill--white {
-	background-color: white;
+  background-color: white;
 
-	.pill__close {
-		color: $gray;
-	}
+  .pill__close {
+    color: $gray;
+  }
 
-	&:hover .pill__close {
-		color: $primary-blue;
-	}
+  &:hover .pill__close {
+    color: $primary-blue;
+  }
 }
 
 .pill--closable:hover {
-	color: $primary-blue;
-	cursor: pointer;
-	background-color: $blue-gray-lightest;
+  color: $primary-blue;
+  cursor: pointer;
+  background-color: $blue-gray-lightest;
 }
 
 .pill--small {
-	font-size: 1.2rem;
-	padding: 0 0.5rem;
-	line-height: 1.5;
-	height: 2rem;
+  font-size: 1.2rem;
+  padding: 0 0.5rem;
+  line-height: 1.5;
+  height: 2rem;
 }
 
 
 // Concept
 .pill--gray-light {
-	background-color: rgba($gray-light, 0.1);
-	color: mix($gray-light, $gray-dark, 50%);
-	border-color: rgba(mix($gray-light, $gray-dark, 80%), 0.3);
+  background-color: $gray-lightest-contrast;
+  color: $gray;
+  border-color: $gray-lighter;
 }
 
 // Agenda publiek
 .pill--primary-yellow {
-	background-color: rgba($primary-yellow, 0.1);
-	color: mix($primary-yellow, $gray-dark, 40%);
-	border-color: rgba(mix($primary-yellow, $gray-dark, 90%), 1);
+  background-color: rgba($primary-yellow, 0.1);
+  color: mix($primary-yellow, $gray-dark, 40%);
+  border-color: rgba(mix($primary-yellow, $gray-dark, 90%), 1);
 }
 
 // Goedgekeurd
 .pill--gray-dark {
-	background-color: rgba($gray-dark, 0.1);
-	color: mix($gray-dark, $gray-dark, 50%);
-	border-color: rgba(mix($gray-dark, $gray-dark, 80%), 0.3);
+  background-color: rgba($gray-dark, 0.1);
+  color: mix($gray-dark, $gray-dark, 50%);
+  border-color: rgba(mix($gray-dark, $gray-dark, 80%), 0.3);
 }
 
 // Notulen publiek
 .pill--primary-blue {
-	background-color: rgba($primary-blue, 0.1);
-	color: mix($primary-blue, $gray-dark, 50%);
-	border-color: rgba(mix($primary-blue, $gray-dark, 80%), 0.3);
+  background-color: rgba($primary-blue, 0.1);
+  color: mix($primary-blue, $gray-dark, 50%);
+  border-color: rgba(mix($primary-blue, $gray-dark, 80%), 0.3);
 }
 
 .pill--red {
-	background-color: rgba($red-light, 0.1);
-	color: mix($red-light, $gray-dark, 50%);
-	border-color: rgba(mix($red-light, $gray-dark, 80%), 0.3);
+  background-color: rgba($red-light, 0.1);
+  color: mix($red-light, $gray-dark, 50%);
+  border-color: rgba(mix($red-light, $gray-dark, 80%), 0.3);
 }
 
 .pill--green {
-	background-color: rgba($green, 0.1);
-	color: mix($green, $gray-dark, 50%);
-	border-color: rgba(mix($green, $gray-dark, 80%), 0.3);
+  background-color: rgba($green, 0.1);
+  color: mix($green, $gray-dark, 50%);
+  border-color: rgba(mix($green, $gray-dark, 80%), 0.3);
 }
